# shii_study

./: LICENSE  README.md  __init__.py  example.py  pyproject.toml
src/: __init__.py  study.py
src/shii/: study.py
