[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shii"
version = "0.0.1"
authors = [
  { name="boran", email="boran@shii.me"},
]
description = "PYPI tutorial package creation written by Boran"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/boranloves/shii"
Issues = "https://github.com/boranloves/shii"